Change: can compile

--- a/thesis.tex
+++ b/thesis.tex
@@ -102,9 +102,9 @@
 % Change the command: \renewcommand
 \newcommand{\ThesisTitle}{論文のタイトル}
 \newcommand{\ThesisTitleEnglish}{Thesis Title for English}
-\newcommand{\ThesisType}{修士論文}
+\newcommand{\ThesisType}{論文の種類}
 \newcommand{\ThesisYear}{2023}
-\newcommand{\ThesisAuthor}{著者\quad{名}}
+\newcommand{\ThesisAuthor}{著者名}
 
 \newcommand{\Nuclide}[2]{$^{#1}#2$} % Put Nuclide such Fl-298(\Nuclide{298}{114}) for New superheavy element
 
